--- a/layouts/index.html
+++ b/layouts/index.html
@@ -3,10 +3,13 @@
 <section id="eye-catch">
     <div>
         <div>
-            <h1>Linux on Apple Silicon</h1>
-            <p>Asahi Linux aims to bring you a polished Linux® experience on Apple Silicon Macs.</p>
+            <h1>Linux but Dragonified</h1>
+            <p>Dragon Linux aims to bring you a Dragon themed Linux® experience.</p>
             <a href="/about" class="more">Learn more<i class="fas fa-angle-right more"></i></a>
-            <h2>Install from macOS</h2>
+            <h2>Download the ISO today</h2>
+                        <div class="community-button chat-button">
+                <a href="/community" class="rounded-button"><i class="fas fa-hashtag"></i> Channel list</a>
+            </div>
             <pre><code id="curl">curl https://alx.sh | sh</code> <a id="copy-button" href="#"><i class="fa fa-clipboard"></i></code></a></pre>
             <h3><a class="more" href="/fedora/#device-support">Device support<i class="fas fa-angle-right more"></i></a></h3>
         </div>
