--- a/layouts/index.html
+++ b/layouts/index.html
@@ -7,9 +7,7 @@
             <p>Dragon Linux aims to bring you a Dragon themed Linux® experience.</p>
             <a href="/about" class="more">Learn more<i class="fas fa-angle-right more"></i></a>
             <h2>Download the ISO today</h2>
-            <div class="community-button chat-button">
-                <a href="/community" class="rounded-button"><i class="fas fa-hashtag"></i> Channel list</a>
-            </div>
+            <pre><div class="community-button chat-button">curl https://alx.sh | sh</i></a></pre>
             <h3><a class="more" href="/fedora/#device-support">Device support<i class="fas fa-angle-right more"></i></a></h3>
         </div>
         <div>
