--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -2,29 +2,29 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>{{ if not .IsHome }}{{.Title}} - {{ end }}Asahi Linux</title>
+    <title>{{ if not .IsHome }}{{.Title}} - {{ end }}Dragon Linux</title>
     <link rel="stylesheet" href="/css/main.css?{{ slicestr (readFile "static/css/main.css" | md5) 0 8 }}">
     <link href="https://use.fontawesome.com/releases/v6.7.1/css/all.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link id="favicon" rel="icon" href="/img/AsahiLinux_logomark_32px.png">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Noto+Sans+JP:wght@300;500;700&family=Noto+Serif+JP:wght@200;500&family=Varela+Round&display=swap" rel="stylesheet">
     {{ if .OutputFormats.Get "RSS" }}
-    <link href="{{ (.OutputFormats.Get "RSS").RelPermalink }}" rel="alternate" type="application/rss+xml" title="{{ if not .IsHome }}{{.Title}} - {{ end }}Asahi Linux" />
-    <link href="{{ (.OutputFormats.Get "RSS").RelPermalink }}" rel="feed" type="application/rss+xml" title="{{ if not .IsHome }}{{.Title}} - {{ end }}Asahi Linux" />
+    <link href="{{ (.OutputFormats.Get "RSS").RelPermalink }}" rel="alternate" type="application/rss+xml" title="{{ if not .IsHome }}{{.Title}} - {{ end }}Dragon Linux" />
+    <link href="{{ (.OutputFormats.Get "RSS").RelPermalink }}" rel="feed" type="application/rss+xml" title="{{ if not .IsHome }}{{.Title}} - {{ end }}Dragon Linux" />
     {{ end }}
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, user-scalable=yes">
 
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@AsahiLinux" />
     <meta name="twitter:creator" content="@AsahiLinux" />
-    <meta name="twitter:title" content="{{ if not .IsHome }}{{.Title}} - {{ end }}Asahi Linux" />
+    <meta name="twitter:title" content="{{ if not .IsHome }}{{.Title}} - {{ end }}Dragon Linux" />
     <meta name="twitter:description" content="Porting Linux to Apple Silicon" />
     <meta name="twitter:image" content="https://asahilinux.org/img/AsahiLinux_logomark_256px.png" />
     <meta name="twitter:image:width" content="256">
     <meta name="twitter:image:height" content="256">
 
     <meta property="og:image" content="https://asahilinux.org/img/AsahiLinux_logomark_256px.png">
-    <meta property="og:title" content="{{ if not .IsHome }}{{.Title}} - {{ end }}Asahi Linux">
+    <meta property="og:title" content="{{ if not .IsHome }}{{.Title}} - {{ end }}Dragon Linux">
     <script>
         var kawaii = (new URLSearchParams(window.location.search)).get("kawaii") ?? localStorage.getItem("kawaii");
         if (kawaii == "true") {
