--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -38,7 +38,7 @@
 <body class="{{ .Scratch.Get "body_class" }}">
     <header id="header">
         <div class="header-logo">
-            <a href="/"><img src="/img/AsahiLinux_logo.svg?{{ slicestr (readFile "static/img/AsahiLinux_logo.svg" | md5) 0 8 }}" class="logo" alt=""></a>
+            <a href="/"><img src="/img/AsahiLinux_logo.svg?{{ slicestr (readFile "https://www.venith.net/legacy/assets/images/banner.png" | md5) 0 8 }}" class="logo" alt=""></a>
         </div>
         <div class="header-menu">
             <ul class="menu-container flex-container">
