--- a/layouts/index.html
+++ b/layouts/index.html
@@ -11,7 +11,7 @@
             <h3><a class="more" href="/fedora/#device-support">Device support<i class="fas fa-angle-right more"></i></a></h3>
         </div>
         <div>
-            <img class="laptop" src="/img/merge/desktop.png?{{ slicestr (readFile "static/img/merge/desktop.png" | md5) 0 8 }}" alt="Asahi Linux on a laptop">
+            <img class="laptop" src="/img/merge/desktop.png?{{ slicestr (readFile "static/img/merge/desktop.png" | md5) 0 8 }}" alt="Dragon Linux on a laptop">
         </div>
     </div>
 </section>
@@ -40,7 +40,7 @@
                 </div>
             </div>
             <div class="community-button discourse-button">
-                <a rel="me" href="https://discussion.fedoraproject.org/c/neighbors/asahi/92" class="mastodon-button rounded-button"><i class="fab fa-discourse"></i> Asahi Linux Discussion</a>
+                <a rel="me" href="https://discussion.fedoraproject.org/c/neighbors/asahi/92" class="mastodon-button rounded-button"><i class="fab fa-discourse"></i> Dragon Linux Discussion</a>
             </div>
         </div>
         <div class="community-twitter">
@@ -77,7 +77,7 @@
     </div>
     <div class="contribute-card center-card">
         <i class="big-icon fab fa-github"></i>
-        <p>Asahi Linux and the open source projects it depends on are made possible by communities of volunteers. All contributors are welcome, of any skill level!</p>
+        <p>Dragon Linux and the open source projects it depends on are made possible by communities of volunteers. All contributors are welcome, of any skill level!</p>
         <a href="/contribute" class="more">How to contribute<i class="fas fa-angle-right more"></i></a>
     </div>
 </section>
