--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -2,11 +2,11 @@
         <div class="footer-menu">
             <div class="footer-logo">
                 <a href="/">
-                    <img src="/img/AsahiLinux_logomark.svg" class="logo" alt="Asahi Linux logo">
+                    <img src="/img/AsahiLinux_logomark.svg" class="logo" alt="Dragon Linux logo">
                 </a>
                 <span class="license">Licensed under CC BY-SA 4.0</span>
                 <span class="disclaimer">Linux® is the registered trademark of Linus Torvalds in the U.S. and other countries. All other product names, logos, and brands are property of their respective owners.
-                    <span class="kawaii-disclaimer">Kawaii Asahi Linux logo by <a href="https://github.com/SAWARATSUKI/Logos">SAWARATSUKI</a> (see link for license).</span>
+                    <span class="kawaii-disclaimer">Kawaii Dragon Linux logo by <a href="https://github.com/SAWARATSUKI/Logos">SAWARATSUKI</a> (see link for license).</span>
                 </span>
             </div>
             <div class="footer-links">
