--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -2,7 +2,7 @@
         <div class="footer-menu">
             <div class="footer-logo">
                 <a href="/">
-                    <img src="/img/AsahiLinux_logomark.svg" class="logo" alt="Dragon Linux logo">
+                    <img src="/img/merge/dragon(1).jpeg" class="logo" alt="Dragon Linux logo">
                 </a>
                 <span class="license">Licensed under CC BY-SA 4.0</span>
                 <span class="disclaimer">Linux® is the registered trademark of Linus Torvalds in the U.S. and other countries. All other product names, logos, and brands are property of their respective owners.
