--- a/layouts/index.html
+++ b/layouts/index.html
@@ -7,7 +7,7 @@
             <p>Dragon Linux aims to bring you a Dragon themed Linux® experience.</p>
             <a href="/about" class="more">Learn more<i class="fas fa-angle-right more"></i></a>
             <h2>Download the ISO today</h2>
-            <pre><a href="https://sourceforge.net/projects/sujix-linux/files/latest/download"><code id="curl">Download</code></a></pre>
+            <pre><a href="#download"><code id="curl">Download</code></a></pre>
             <h3><a class="more" href="/fedora/#device-support">Device support<i class="fas fa-angle-right more"></i></a></h3>
         </div>
         <div>
