--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="/css/main.css?{{ slicestr (readFile "static/css/main.css" | md5) 0 8 }}">
     <link href="https://use.fontawesome.com/releases/v6.7.1/css/all.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link id="favicon" rel="icon" href="/img/AsahiLinux_logomark_32px.png">
+    <link id="favicon" rel="icon" href="/img/merge/dragon(1).jpeg">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Noto+Sans+JP:wght@300;500;700&family=Noto+Serif+JP:wght@200;500&family=Varela+Round&display=swap" rel="stylesheet">
     {{ if .OutputFormats.Get "RSS" }}
     <link href="{{ (.OutputFormats.Get "RSS").RelPermalink }}" rel="alternate" type="application/rss+xml" title="{{ if not .IsHome }}{{.Title}} - {{ end }}Dragon Linux" />
@@ -15,15 +15,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, user-scalable=yes">
 
     <meta name="twitter:card" content="summary" />
-    <meta name="twitter:site" content="@AsahiLinux" />
-    <meta name="twitter:creator" content="@AsahiLinux" />
+    <meta name="twitter:site" content="@DragonLinux" />
+    <meta name="twitter:creator" content="@DragonLinux" />
     <meta name="twitter:title" content="{{ if not .IsHome }}{{.Title}} - {{ end }}Dragon Linux" />
-    <meta name="twitter:description" content="Porting Linux to Apple Silicon" />
-    <meta name="twitter:image" content="https://asahilinux.org/img/AsahiLinux_logomark_256px.png" />
+    <meta name="twitter:description" content="The most dragonified Linux distribution to exist" />
+    <meta name="twitter:image" content="https://dragon-linux.venith.net/img/merge/dragon(1).jpeg" />
     <meta name="twitter:image:width" content="256">
     <meta name="twitter:image:height" content="256">
 
-    <meta property="og:image" content="https://asahilinux.org/img/AsahiLinux_logomark_256px.png">
+    <meta property="og:image" content="https://dragon-linux.venith.net/img/merge/dragon(1).jpeg">
     <meta property="og:title" content="{{ if not .IsHome }}{{.Title}} - {{ end }}Dragon Linux">
     <script>
         var kawaii = (new URLSearchParams(window.location.search)).get("kawaii") ?? localStorage.getItem("kawaii");
