--- a/layouts/index.html
+++ b/layouts/index.html
@@ -21,7 +21,7 @@
     </div>
     <div class="download-card center-card">
         <i class="big-icon fas fa-arrow-down"></i>
-        <p>Fedora Asahi Remix is now released!</p>
+        <p>Ubuntu Dragon Remix is now released!</p>
         <a href="/fedora" class="more">Read the announcement<i class="fas fa-angle-right more"></i></a>
     </div>
 </section>
