--- a/layouts/index.html
+++ b/layouts/index.html
@@ -36,11 +36,11 @@
                     <i class="big-icon fab fa-discourse"></i>
                 </div>
                 <div class="community-text">
-                    <p>Ask questions and talk with other users on our little corner of Fedora Discussion!</p>
+                    <p>Ask questions and talk with other users on our little corner on Discord!</p>
                 </div>
             </div>
             <div class="community-button discourse-button">
-                <a rel="me" href="https://discussion.fedoraproject.org/c/neighbors/asahi/92" class="mastodon-button rounded-button"><i class="fab fa-discourse"></i> Dragon Linux Discussion</a>
+                <a rel="me" href="https://discord.go.venith.net" class="mastodon-button rounded-button"><i class="fab fa-discourse"></i> Dragon Linux Discussion</a>
             </div>
         </div>
         <div class="community-twitter">
@@ -53,7 +53,7 @@
                 </div>
             </div>
             <div class="community-button twitter-buttons">
-                <a rel="me" href="https://social.treehouse.systems/@AsahiLinux" class="mastodon-button rounded-button"><i class="fab fa-mastodon"></i> @AsahiLinux<wbr>@treehouse.systems</a>
+                <a rel="me" href="#" class="mastodon-button rounded-button"><i class="fab fa-mastodon"></i> @AsahiLinux<wbr>@treehouse.systems</a>
             </div>
         </div>
         <div class="community-chat">
