--- a/layouts/index.html
+++ b/layouts/index.html
@@ -53,7 +53,7 @@
                 </div>
             </div>
             <div class="community-button twitter-buttons">
-                <a rel="me" href="#" class="mastodon-button rounded-button"><i class="fab fa-mastodon"></i> @AsahiLinux<wbr>@treehouse.systems</a>
+                <a rel="me" href="https://nerdculture.de/@astafathersatan" class="mastodon-button rounded-button"><i class="fab fa-mastodon"></i> @AstaFatherSatan<wbr>@nerculture.de</a>
             </div>
         </div>
         <div class="community-chat">
@@ -62,11 +62,11 @@
                     <i class="big-icon fas fa-hashtag"></i>
                 </div>
                 <div class="community-text">
-                    <p>Our primary communications platform is IRC on OFTC.</p>
+                    <p>We also have more resources for support available below.</p>
                 </div>
             </div>
             <div class="community-button chat-button">
-                <a href="/community" class="rounded-button"><i class="fas fa-hashtag"></i> Channel list</a>
+                <a href="/community" class="rounded-button"><i class="fas fa-hashtag"></i>Support</a>
             </div>
         </div>
     </div>
@@ -87,7 +87,7 @@
     </div>
     <div class="documentation-card center-card">
         <i class="big-icon fas fa-book-open"></i>
-        <p>We are documenting the Apple Silicon platform on our documentation website.</p>
+        <p>WIP - We are documenting the Apple Silicon platform on our documentation website.</p>
         <a href="/docs" class="more">Read the documentation<i class="fas fa-angle-right more"></i></a>
     </div>
 </section>
