--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -11,10 +11,9 @@
             </div>
             <div class="footer-links">
                 <ul class="footer-services">
-                    <li><a href="https://social.treehouse.systems/@AsahiLinux"><i class="fab fa-mastodon"></i></a></li>
-                    <li><a href="https://bsky.app/profile/asahilinux.org"><i class="fab fa-bluesky"></i></a></li>
-                    <li><a href="https://www.linkedin.com/company/asahilinux/"><i class="fab fa-linkedin"></i></a></li>
-                    <li><a href="https://github.com/AsahiLinux"><i class="fab fa-github"></i></a></li>
+                    <li><a href="https://nerdculture.de/@astafathersatan"><i class="fab fa-mastodon"></i></a></li>
+                    <li><a href="https://bsky.app/profile/mattthetekie.bsky.social"><i class="fab fa-bluesky"></i></a></li>
+                    <li><a href="https://github.com/VenithNET"><i class="fab fa-github"></i></a></li>
                     <!-- TODO: Open Collective? https://github.com/FortAwesome/Font-Awesome/issues/14475 -->
                 </ul>
                 <ul class="footer-menu-container">
