--- a/layouts/index.html
+++ b/layouts/index.html
@@ -53,7 +53,7 @@
                 </div>
             </div>
             <div class="community-button twitter-buttons">
-                <a rel="me" href="https://nerdculture.de/@astafathersatan" class="mastodon-button rounded-button"><i class="fab fa-mastodon"></i> @AstaFatherSatan<wbr>@nerculture.de</a>
+                <a rel="me" href="https://nerdculture.de/@astafathersatan" class="mastodon-button rounded-button"><i class="fab fa-mastodon"></i> Check us out on Mastodon</a>
             </div>
         </div>
         <div class="community-chat">
@@ -66,7 +66,7 @@
                 </div>
             </div>
             <div class="community-button chat-button">
-                <a href="/community" class="rounded-button"><i class="fas fa-hashtag"></i>Support</a>
+                <a href="/community" class="rounded-button"><i class="fas fa-hashtag"></i> Support</a>
             </div>
         </div>
     </div>
