--- a/layouts/index.html
+++ b/layouts/index.html
@@ -40,7 +40,7 @@
                 </div>
             </div>
             <div class="community-button discourse-button">
-                <a rel="me" href="https://discord.go.venith.net" class="mastodon-button rounded-button"><i class="fab fa-discourse"></i> Dragon Linux Discussion</a>
+                <a rel="me" href="/community" class="mastodon-button rounded-button"><i class="fab fa-discourse"></i> Dragon Linux Discussion</a>
             </div>
         </div>
         <div class="community-twitter">
@@ -55,21 +55,6 @@
             <div class="community-button twitter-buttons">
                 <a rel="me" href="https://nerdculture.de/@astafathersatan" class="mastodon-button rounded-button"><i class="fab fa-mastodon"></i> Check us out on Mastodon</a>
             </div>
-        </div>
-        <div class="community-chat">
-            <div class="community-card">
-                <div class="community-icons">
-                    <i class="big-icon fas fa-hashtag"></i>
-                </div>
-                <div class="community-text">
-                    <p>We also have more resources for support available below.</p>
-                </div>
-            </div>
-            <div class="community-button chat-button">
-                <a href="/community" class="rounded-button"><i class="fas fa-hashtag"></i> Support</a>
-            </div>
-        </div>
-    </div>
 </section>
 <section id="contribute">
     <div class="center-title">
