--- a/layouts/index.html
+++ b/layouts/index.html
@@ -33,13 +33,13 @@
         <div class="community-fedora">
             <div class="community-card">
                 <div class="community-icons">
-                    <i class="big-icon fab fa-discourse"></i>
+                    <i class="big-icon fab fa-discord"></i>
                 </div>
                 <div class="community-text">
                     <p>Ask questions and talk with other users on our little corner on Discord!</p>
                 </div>
             </div>
-            <div class="community-button discourse-button">
+            <div class="community-button discord-button">
                 <a rel="me" href="/community" class="mastodon-button rounded-button"><i class="fab fa-discourse"></i> Dragon Linux Discussion</a>
             </div>
         </div>
