--- a/layouts/index.html
+++ b/layouts/index.html
@@ -39,8 +39,8 @@
                     <p>Ask questions and talk with other users on our little corner on Discord!</p>
                 </div>
             </div>
-            <div class="community-button discord-button">
-                <a rel="me" href="/community" class="mastodon-button rounded-button"><i class="fab fa-discourse"></i> Dragon Linux Discussion</a>
+            <div class="community-button discourse-button">
+                <a rel="me" href="/community" class="mastodon-button rounded-button"><i class="fab fa-discord"></i> Dragon Linux Discussion</a>
             </div>
         </div>
         <div class="community-twitter">
@@ -55,6 +55,9 @@
             <div class="community-button twitter-buttons">
                 <a rel="me" href="https://nerdculture.de/@astafathersatan" class="mastodon-button rounded-button"><i class="fab fa-mastodon"></i> Check us out on Mastodon</a>
             </div>
+        </div>
+        </div>
+    </div>
 </section>
 <section id="contribute">
     <div class="center-title">
