chore: update site

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -8,7 +8,7 @@
             <a href="/about" class="more">Learn more<i class="fas fa-angle-right more"></i></a>
             <h2>Download the ISO today</h2>
             <pre><a href="#download"><code id="curl">Download</code></a></pre>
-            <h3><a class="more" href="/fedora/#device-support">Device support<i class="fas fa-angle-right more"></i></a></h3>
+            <h3><a class="more" href="/ubuntu/#device-support">Device support<i class="fas fa-angle-right more"></i></a></h3>
         </div>
         <div>
             <img class="laptop" src="/img/merge/desktop.png?{{ slicestr (readFile "static/img/merge/desktop.png" | md5) 0 8 }}" alt="Dragon Linux on a laptop">
@@ -17,12 +17,12 @@
 </section>
 <section id="download">
     <div class="center-title">
-        <h1><a class="stealth" href="/fedora">Download</a></h1>
+        <h1><a class="stealth" href="/ubuntu">Download</a></h1>
     </div>
     <div class="download-card center-card">
         <i class="big-icon fas fa-arrow-down"></i>
         <p>Ubuntu Dragon Remix is now released!</p>
-        <a href="/fedora" class="more">Read the announcement<i class="fas fa-angle-right more"></i></a>
+        <a href="/ubuntu" class="more">Read the announcement<i class="fas fa-angle-right more"></i></a>
     </div>
 </section>
 <section id="community" class="white-text">
