--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>{{ if not .IsHome }}{{.Title}} - {{ end }}Home - Dragon Linux</title>
+    <title>{{ if not .IsHome }}{{.Title}} - {{ end }}Dragon Linux</title>
     <link rel="stylesheet" href="/css/main.css?{{ slicestr (readFile "static/css/main.css" | md5) 0 8 }}">
     <link href="https://use.fontawesome.com/releases/v6.7.1/css/all.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -17,7 +17,7 @@
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@DragonLinux" />
     <meta name="twitter:creator" content="@DragonLinux" />
-    <meta name="twitter:title" content="{{ if not .IsHome }}{{.Title}} - {{ end }}Home - Dragon Linux" />
+    <meta name="twitter:title" content="{{ if not .IsHome }}{{.Title}} - {{ end }}Dragon Linux" />
     <meta name="twitter:description" content="The most dragonified Linux distribution to exist" />
     <meta name="twitter:image" content="https://dragon-linux.venith.net/img/merge/dragon1.png" />
     <meta name="twitter:image:width" content="256">
