--- a/layouts/index.html
+++ b/layouts/index.html
@@ -36,6 +36,21 @@
         }
     </script>
 </head>
+<body class="{{ .Scratch.Get "body_class" }}">
+    <header id="header">
+        <div class="header-logo">
+            <a href="/"><img src="/img/merge/dragon.jpeg?{{ slicestr (readFile "static/img/merge/dragon.jpeg" | md5) 0 8 }}" class="logo" alt=""></a>
+        </div>
+        <div class="header-menu">
+            <ul class="menu-container flex-container">
+                <li><a href="/about">About</a></li>
+                <li><a href="/community">Community</a></li>
+                <li><a href="/contribute">Contribute</a></li>
+                <li><a href="https://github.com/VenithNET">GitHub</a></li>
+                <li><a href="/blog">Blog</a></li>
+            </ul>
+        </div>
+    </header>
 <section id="eye-catch">
     <div>
         <div>
